# testai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_package.sh  pyproject.toml  run_tests.py  setup.cfg  setup.py
.github/workflows/: pre-commit.yml  python-package.yml
docs/: api.md  contributing.md  examples.md  index.md  installation.md  quickstart.md
examples/: basic_usage.py  openai_monitoring.py
result_ai_sdk/: __init__.py  patch.py  queue.py  queue_utils.py
result_ai_sdk/plugins/: __init__.py  openai_wrapper.py
testai_sdk/: __init__.py  core.py
tests/: test_core.py  test_patch.py
