[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
packages = find:
python_requires = >=3.7
install_requires =
    openai>=1.0.0
    requests>=2.25.0

[options.extras_require]
dev =
    pytest>=6.0.0
    black>=22.1.0
    isort>=5.10.1
    flake8>=4.0.1
    build>=0.7.0
    twine>=3.8.0

[options.packages.find]
exclude =
    tests
    examples
    docs

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist
